refactor: Stream 종결 연산 통일